# qml-widgtes-templates

./: README.md  qml_widgets.pro
examples/basic_widgets_example/: basic_widgets_example.cpp  basic_widgets_example.pro  basic_widgets_example.qrc
examples/basic_widgets_example/qml/: basic_widgets_example.qml
examples/basic_widgets_example/qml/Tabs/: AboutTab.qml  ControlsTab.qml
examples/gallery_example/: gallery_example.cpp  gallery_example.pro  gallery_example.qrc
examples/gallery_example/qml/: gallery_example.qml
examples/gallery_example/qml/Tabs/: Controls.qml
qml_widgets_lib/: CMakeLists.txt  qml_widgets.qrc  qml_widgets_lib.pro
qml_widgets_lib/qml/Basic/: BasicItem.qml
qml_widgets_lib/qml/Basic/Containers/: TabContainer.qml  TabWidget.qml
qml_widgets_lib/qml/Basic/Controls/: Bar.qml  Button.qml  CheckBox.qml  Clickable.qml  Edit.qml  LineEdit.qml  MenuClickable.qml  RadioButton.qml  ScrollBar.qml  Slider.qml  Switch.qml
qml_widgets_lib/qml/Basic/Display/: Led.qml  ProgressBar.qml
qml_widgets_lib/qml/Basic/Groups/: CheckGroup.qml  RadioGroup.qml
qml_widgets_lib/qml/Basic/Misk/: Bordered.qml  Circle.qml  ForegroundItem.qml  HorizontalSeparator.qml  Label.qml  Palette.qml  ScrollArea.qml  Shadow.qml
qml_widgets_lib/qml/Basic/Widgets/: Menu.qml  Widget.qml
